--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,18 @@
+1.1.151
+    Fixed gun damage
+    Updated to 1.15
+    Fixed "Brown Bess" and Aliens Rifle
+    Fixed damage being disabled from melee.
+    Fixed custom lore.
+
+1.1.150
+    Fixed ironsights for right-click
+    Added setting so players cannot melee with weapons
+    Fixed shots not being fired if too close to entity
+
+1.1.149
+    Fixed gun buying if gun is in player's inventory.
+
 1.1.148
    Fixed config reloading.
    Possibly fixed issue with delayed hits.
