--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,6 @@
+1.1.155
+    Fixed error where files cannot be edited.
+
 1.1.154
     #Beautification update#
     Rewrote bullet code to improve performance
