--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,9 @@
+1.1.157
+    Removed ViaVersion handler. You now will need to specify which version QA will need to run on.
+    Fixed reloading error message
+    Fixed ammo being deleted if the player is killed while reloading.
+    Fixed a bunch of NPEs
+
 1.1.156
     Fixed swap item error
     Code cleanup
