--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,6 @@
+1.1.159
+    Fixed 1.8 resourcepack
+
 1.1.158
     Fixed gun duplication when sneaking on automatic weapon
     Made ironsights name configuable.
