--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,8 @@
+1.1.166C
+    - Added QACustomItemInteractEvent to cancel interactions with specific items.
+    - Fixed guns not firing
+    - Added ItemBridge support
+
 1.1.166
     - AlessioDP:  Updated and fixed Parties support
     - Fixed naming issues
