--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,7 @@
+1.1.166E
+    - Fixed offhand error for 1.8
+    - Updated QAV support.
+
 1.1.166D
     - Fixed checking gun durability breaking if item checked does not have lore
     - Update CustomItemManager code.
