--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,12 @@
+1.1.167
+    - Added check for worldguard flags before adding explosion.
+    - Fixed issue with gun duirability and automatic weapons
+    - Added Spear
+    - Re-added Henry Rifle
+
+1.1.166F
+    - Quick bugfix: Gun dupe of disconnect
+
 1.1.166E
     - Fixed offhand error for 1.8
     - Updated QAV support.
