--- a/src/main/resources/lang/message_en.yml
+++ b/src/main/resources/lang/message_en.yml
@@ -1,3 +1,4 @@
+Prefix: "&8[&2QualityArmory&8]&r"
 NoPermAnvilMessage: ' &a You do not have permission to use this armory bench. Shift+Click
   to access anvil.'
 NoPerm: '&c You do not have permission to do that.'
