Added HEX color support.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,10 @@
+1.1.179-UNOFFICIAL
+    - Added HEX color support for items and messages (Warning: Already created weapons might stop working if you change lore, same as before)
+    - Reminder: HEX colors format is with # only. Example: "#aabbcc" NOT &#aabbcc". Hex doesn't work with action bar or titles. (Minecraft limitations)
+1.1.178-UNOFFICIAL
+    - Fixed unlimited ammo
+    - Fixed spam in console
+    - Fixed action bar messages
 1.1.176
     - Added Galil-AR
     - Added CTAR-21
