--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,7 @@
+2.0.1
+    - Added an API method to check if a player is using a gun
+    - Fixed flamer fuel
+
 2.0
     - Added HEX color support for items and messages (Warning: Already created weapons might stop working if you change lore, same as before)
     - Reminder: HEX colors format is with # only. Example: "#aabbcc" NOT &#aabbcc". Hex doesn't work with action bar or titles. (Minecraft limitations)
