--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,7 @@
+2.0.4
+    - 1.18 support
+    - Added a way to reload with the Q button
+
 2.0.3
     - Added residence,towny and worldguard support
     - Fixed item give on shop
