Fixed passengers damage
Closes #206

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -4,6 +4,7 @@
     - Added Matrix anticheat support
     - Fixed the protection handler
     - Fixed grenade duplication
+    - Fixed damage for entity passengers
 
 2.0.3
     - Added residence,towny and worldguard support
