--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,6 @@
+2.0.6
+  - Added ammobags
+
 2.0.5.1
    - Fixed a bug that allow users to drop item out of guis
    - Updated the resourcepack link to the latest version
