--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,10 @@
+2.0.8
+  - Fixed mimic support
+  - Added explode event
+  - Added GriefPrevention support
+  - Now the gun doesn't go "up and down" when firing
+  - QualityArmory-Resourcepack: 1.19.3 support
+
 2.0.7
   - Fixed worldguard protection
   - Fixed chestshop support
