--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,5 +1,11 @@
 2.0.10
   - 1.20 support
+  - Fixed ammo update when IronSights is enabled
+  - Fixed various ammo duplication issues
+  - Added option to disable crafting
+  - Auto load guns on /qa give
+  - Updated dependencies
+  - Fixed rpg damage
 
 2.0.9
   - Fixed ammo reload
