--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,5 +1,9 @@
 2.0.11
   - 1.20.2 support
+  - Fixed ProtocolLib support
+  - Stopped aim on player leave
+  - Fixed ammo duplication
+  - Fixed durability lang
 
 2.0.10
   - 1.20 support
