--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -2,6 +2,7 @@
   - Fixed resourcepack for 1.21.x
   - 1.21.5 support
   - Fixed towny explosions
+  - Fixed slowness issue
 
 2.0.18
   - Fixed resourcepack for 1.21.4
