Fixed ammo in exp bar Closes #169

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -5,6 +5,7 @@
   - Fixed slowness issue
   - Add option to disable recoil based on move
   - Added headshot blacklist
+  - Fixed ammo in exp bar
 
 2.0.18
   - Fixed resourcepack for 1.21.4
