Added hit sound (#650) Closes #650

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -3,6 +3,7 @@
   - Fixed gun glow
   - Fixed armor protection
   - Fixed menu item duplication
+  - Added hit sound
 
 2.0.19
   - Fixed resourcepack for 1.21.x
