--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,5 +1,7 @@
 2.0.33
   - Fixed direct entity damage causing double death
+  - Disabled hotbar ammo count if the reload didn't succeed
+  - Fixed support for versions before 1.17
 
 2.0.22
   - Fixed ammo purchase with full inventory
