--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,7 @@
+2.0.24
+  - Fixed death message error
+  - Fixed grenade throw on death
+
 2.0.23
   - Fixed direct entity damage causing double death
   - Disabled hotbar ammo count if the reload didn't succeed
