--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,7 @@
 2.0.24
   - Fixed death message error
   - Fixed grenade throw on death
+  - Fixed armor protection
 
 2.0.23
   - Fixed direct entity damage causing double death
