Rewrote GUI system to a new fully customizable one

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,7 @@
+2.1.0
+  - 1.21.10 support
+  - Added new fully customizable menu
+
 2.0.24
   - Fixed death message error
   - Fixed grenade throw on death
