--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,7 @@
 2.1.0
   - 1.21.10 support
   - Added new fully customizable menu
+  - Fix ammo and usage in automatic fire mode
 
 2.0.24
   - Fixed death message error
